<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_order_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:background="@color/splashBackground">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nuevo_pedido"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_order_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/recycler_drawable"
            android:paddingHorizontal="8dp"
            android:paddingVertical="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_ordenes"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/recycler_drawable"
            android:paddingHorizontal="8dp"
            android:paddingVertical="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_order_recycler_view"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/anadir_a_cesta_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp"
            android:text="@string/agregar_a_cesta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_ordenes"
            app:layout_constraintVertical_bias="0.01" />

        <Button
            android:id="@+id/cancelar_pedido_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_button_drawable"
            android:paddingHorizontal="4dp"
            android:paddingVertical="2dp"
            android:text="@string/cancelar_pedido"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.812"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_ordenes"
            app:layout_constraintVertical_bias="0.005" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>