...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="2dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cantidad_deseada_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:paddingHorizontal="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
...
                android:textColor="@color/black"
                android:textStyle="normal|bold"
                android:elegantTextHeight="true"
                android:elevation="10sp"/>

            <ImageButton
                android:id="@+id/add_to_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_layout"
                android:src="@drawable/ic_baseline_add_box_24" />
        </LinearLayout>
...
