...
                android:gravity="center"
                android:text='@{"TOTAL: "+String.valueOf(order.precio_total)}'
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="normal|bold"/>
            <Button
                android:id="@+id/remove_item_button"
                android:layout_width="34dp"
                android:layout_height="39dp"
                android:layout_marginStart="200dp"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/ic_baseline_cancel_24" />

...
