<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <LinearLayout
            android:id="@+id/progress_bar_layout_register_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <androidx.core.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/cargando_usuarios"
                android:layout_weight="0.8"
                android:translationZ="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_a_moment"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_weight="0.2"
                android:textColor="@color/black"
                android:textStyle="bold|italic|normal"
                android:textSize="16pt"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/crea_usuario_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cif_usuario"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:hint="@string/hint_cif"
            android:lines="1"
            android:maxLength="10"
            android:textColorHint="@color/black"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:maxLength="40"
            android:hint="@string/hint_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cif_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/apellidos_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="40"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:hint="@string/hint_apellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/direccion_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp"
            android:maxLength="40"
            android:textSize="16sp"
            android:hint="@string/hint_direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellidos_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/telefono_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="15"
            android:textColorHint="@color/black"
            android:hint="@string/hint_telefono"
            android:inputType="phone"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direccion_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="40"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefono_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contrasena_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:hint="@string/hint_contrasena"
            android:maxLength="40"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_usuario" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repite_contrasena_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLength="40"
            android:textSize="16sp"
            android:hint="@string/hint_repite_contrasena"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasena_usuario" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/pregunta_recuperacion_contrasena_spinner"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:foregroundTint="@color/splashBackground"
            android:spinnerMode="dropdown"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/hint_pregunta_recupera_contrasena"
            android:pointerIcon="arrow"
            android:paddingTop="5dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repite_contrasena_usuario"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/respuesta_recuperacion_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_respuesta_recupera_contrasena"
            android:textSize="16sp"
            android:maxLength="40"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pregunta_recuperacion_contrasena_spinner"
            app:layout_constraintVertical_bias="0.042" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todos_los_campos_son_obligatorios"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar_registro"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/respuesta_recuperacion_contrasena"
            app:layout_constraintVertical_bias="0.079" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>